--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ pickle-email-*.html
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
-config/secrets.yml
+# config/secrets.yml
 
 ## Environment normalisation:
 /.bundle
@@ -46,3 +46,7 @@ config/application.yml
 config/database.yml
 config/mongoid.yml
 config/unicorn.rb
+config/deploy/*
+config/deploy
+Capfile
+config/deploy.rb
