--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ config/initializers/secret_token.rb
 bower.json
 public/uploads/*
 /.bundle
-
+.DS_Store
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
